--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,46 +2,90 @@ name: Deploy to Docker Hub
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  workflow_dispatch:
+
+env:
+  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+  VITE_API_URL: ${{ secrets.VITE_API_URL }}
 
 jobs:
-  deploy-backend:
+  test-frontend:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout código
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
+      - name: Configurar Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+          cache: 'npm'
+
+      - name: Instalar dependencias
+        working-directory: ./10-calendar-frontend
+        run: npm ci
+
+      - name: Ejecutar pruebas
+        working-directory: ./10-calendar-frontend
+        run: npm test
+
+  deploy-backend:
+    runs-on: ubuntu-latest
+    needs: [test-frontend]
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Checkout código
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Login a Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
+          username: ${{ env.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Construir y publicar backend
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           context: ./calendar-backend
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/calendar-backend:latest
+          tags: |
+            ${{ env.DOCKER_USERNAME }}/calendar-backend:latest
+            ${{ env.DOCKER_USERNAME }}/calendar-backend:${{ github.sha }}
+          cache-from: type=registry,ref=${{ env.DOCKER_USERNAME }}/calendar-backend:latest
+          cache-to: type=inline
 
   deploy-frontend:
     runs-on: ubuntu-latest
+    needs: [test-frontend, deploy-backend]
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout código
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Login a Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
+          username: ${{ env.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Construir y publicar frontend
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           context: ./10-calendar-frontend
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/calendar-frontend:latest
+          tags: |
+            ${{ env.DOCKER_USERNAME }}/calendar-frontend:latest
+            ${{ env.DOCKER_USERNAME }}/calendar-frontend:${{ github.sha }}
           build-args: |
-            VITE_API_URL=${{ secrets.VITE_API_URL }}
+            VITE_API_URL=${{ env.VITE_API_URL }}
+          cache-from: type=registry,ref=${{ env.DOCKER_USERNAME }}/calendar-frontend:latest
+          cache-to: type=inline
