Modificaciones en Dockerfile

--- a/calendar-frontend/Dockerfile
+++ b/calendar-frontend/Dockerfile
@@ -5,26 +5,28 @@ FROM node:18-alpine as builder
 WORKDIR /app
 
 # Copiar archivos de dependencias
-COPY package*.json ./
+COPY package.json yarn.lock ./
 
-# Instalar dependencias
-RUN npm install
+# Instalar dependencias con Yarn
+RUN yarn install --frozen-lockfile
 
 # Copiar código fuente
 COPY . .
 
-# Construir la aplicación
+# Pasar variables de entorno necesarias para la construcción
 ARG VITE_API_URL
 ENV VITE_API_URL=${VITE_API_URL}
-RUN npm run build
 
-# Etapa de producción
+# Construir la aplicación con Vite
+RUN yarn build
+
+# Etapa de producción con Nginx
 FROM nginx:1.23.3-alpine
 
 # Copiar archivos de construcción
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Copiar configuración de nginx
+# Copiar configuración de Nginx
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Exponer puerto
