--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,3 +50,29 @@ jobs:
             ${{ secrets.DOCKER_USERNAME }}/calendar-backend:${{ github.sha }}
           cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/calendar-backend:latest
           cache-to: type=inline
+  deploy-frontend:
+      runs-on: ubuntu-latest
+      needs: deploy-backend
+      steps:
+        - name: Checkout código
+          uses: actions/checkout@v3
+
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v2
+
+        - name: Login a Docker Hub
+          uses: docker/login-action@v2
+          with:
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD }}
+
+        - name: Construir y publicar frontend
+          uses: docker/build-push-action@v3
+          with:
+            context: ./calendar-frontend
+            push: true
+            tags: |
+              ${{ secrets.DOCKER_USERNAME }}/calendar-frontend:latest
+              ${{ secrets.DOCKER_USERNAME }}/calendar-frontend:${{ github.sha }}
+            cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/calendar-frontend:latest
+            cache-to: type=inline
