--- a/calendar-frontend/package.json
+++ b/calendar-frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "jest --watchAll"
+    "test:watch": "jest --watchAll",
+    "test": "jest"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
