--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Backend and Frontend with Tests
+name: Deploy Backend to Docker Hub
 
 on:
   push:
@@ -50,51 +50,29 @@ jobs:
             ${{ secrets.DOCKER_USERNAME }}/calendar-backend:${{ github.sha }}
           cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/calendar-backend:latest
           cache-to: type=inline
-  # test-frontend:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout código
-  #       uses: actions/checkout@v3
-
-  #     - name: Listar archivos en calendar-frontend
-  #       working-directory: ./calendar-frontend
-  #       run: ls -la
-
-  #     - name: Configurar Node.js
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: '18'
-  #         # cache: 'yarn'   # Puedes comentarlo temporalmente
-
-  #     - name: Instalar dependencias y ejecutar tests
-  #       working-directory: ./calendar-frontend
-  #       run: |
-  #         yarn install --frozen-lockfile
-  #         yarn test
-
   deploy-frontend:
-    runs-on: ubuntu-latest
-    needs: [deploy-backend, test-frontend]
-    steps:
-      - name: Checkout código
-        uses: actions/checkout@v3
+      runs-on: ubuntu-latest
+      needs: deploy-backend
+      steps:
+        - name: Checkout código
+          uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v2
 
-      - name: Login a Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+        - name: Login a Docker Hub
+          uses: docker/login-action@v2
+          with:
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Construir y publicar frontend
-        uses: docker/build-push-action@v3
-        with:
-          context: ./calendar-frontend
-          push: true
-          tags: |
-            ${{ secrets.DOCKER_USERNAME }}/calendar-frontend:latest
-            ${{ secrets.DOCKER_USERNAME }}/calendar-frontend:${{ github.sha }}
-          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/calendar-frontend:latest
-          cache-to: type=inline
+        - name: Construir y publicar frontend
+          uses: docker/build-push-action@v3
+          with:
+            context: ./calendar-frontend
+            push: true
+            tags: |
+              ${{ secrets.DOCKER_USERNAME }}/calendar-frontend:latest
+              ${{ secrets.DOCKER_USERNAME }}/calendar-frontend:${{ github.sha }}
+            cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/calendar-frontend:latest
+            cache-to: type=inline
