--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,7 @@ jobs:
         with:
           context: ./calendar-backend
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/calendar-backend:latest
             ${{ secrets.DOCKER_USERNAME }}/calendar-backend:${{ github.sha }}
