--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,8 @@ services:
   calendar-frontend:
     image: bboycasper128/calendar-frontend:latest
     container_name: calendar-frontend
+    args:
+        VITE_API_URL: "http://calendar-backend:4000"
     ports:
       - "3000:80"
     depends_on:
