mejoras finales para empezar con el test

--- a/calendar-frontend/Dockerfile
+++ b/calendar-frontend/Dockerfile
@@ -15,7 +15,7 @@ COPY . .
 
 # Pasar variables de entorno necesarias para la construcción
 ARG VITE_API_URL
-ENV VITE_API_URL=${VITE_API_URL}
+ENV VITE_API_URL=http://localhost:4000/api
 
 # Construir la aplicación con Vite
 RUN yarn build
