Insertada ENV semilla

--- a/calendar-backend/Dockerfile
+++ b/calendar-backend/Dockerfile
@@ -16,6 +16,7 @@ COPY . .
 # Definir variables de entorno (opcional, pero mejor en docker-compose.yml)
 ENV PORT=4000
 ENV DB_CNN="mongodb+srv://darwinosorio286:1017230626@calendar-db.umlxspn.mongodb.net/?retryWrites=true&w=majority&appName=calendar-db"
+ENV SECRET_JWT_SEED="Esto-Es-UnA-Palbr@_SecretA1234567"
 
 # Exponer puerto
 EXPOSE 4000
