--- a/calendar-frontend/package.json
+++ b/calendar-frontend/package.json
@@ -13,10 +13,10 @@
     "@reduxjs/toolkit": "^1.8.2",
     "axios": "^1.6.2",
     "date-fns": "^2.28.0",
-    "react": "^18.0.0",
+    "react": "^18.3.1",
     "react-big-calendar": "^0.40.1",
     "react-datepicker": "^4.8.0",
-    "react-dom": "^18.0.0",
+    "react-dom": "^18.3.1",
     "react-modal": "^3.15.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
@@ -25,9 +25,10 @@
   "devDependencies": {
     "@babel/preset-env": "^7.23.6",
     "@babel/preset-react": "^7.23.3",
-    "@testing-library/react": "^14.1.2",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.2.0",
     "@types/jest": "^29.5.11",
-    "@types/react": "^18.0.0",
+    "@types/react": "^18.3.19",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "babel-jest": "^29.7.0",
